--- a/container/src/index.css
+++ b/container/src/index.css
@@ -1,9 +1,12 @@
+@import "tailwindcss";
+
 * {
     box-sizing: border-box;
 }
 
 html {
     position: fixed;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
